--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "advance-json-merge": "^1.0.2",
     "debug": "^4.1.0"
   },
   "peerDependencies": {
