--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "advance-json-merge": "^1.0.3",
+    "advance-json-merge": "1.x.x",
     "debug": "^4.1.0"
   },
   "peerDependencies": {
