--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.umd.js",
   "module": "dist/index.umd.js",
   "browser": "dist/index.umd.js",
+  "idebug": "src/index.tsx",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "repository": {
@@ -69,7 +70,8 @@
   },
   "dependencies": {
     "advance-json-merge": "1.x.x",
-    "debug": "^4.1.0"
+    "debug": "^4.1.0",
+    "ts-debounce-throttle": "1.x.x"
   },
   "peerDependencies": {
     "ette": "0.x",
