--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ide-lib-utils",
-  "version": "0.1.11",
+  "version": "0.2.0-alpha1",
   "description": "[lib] utils for ide",
   "main": "dist/index.umd.js",
   "module": "dist/index.umd.js",
